--- a/maintainence-mayhem/index.html
+++ b/maintainence-mayhem/index.html
@@ -265,8 +265,8 @@
 		</p>
 		<p>
 			In an incident from
-		last year that Lou recorded on his phone and shared with The Daily
-		Pennsylvanian, the same specialist that cleared the room in September pointed
+		last year that Lou recorded on his phone and shared with The DP, 
+		the same specialist that cleared the room in September pointed
 		to darkly-colored mold and said "I see nothing but dirt there." He then advised
 		Lou and other plumbers to "cover up" the mold, rather than formally remove it.
 		
