--- a/maintainence-mayhem/index.html
+++ b/maintainence-mayhem/index.html
@@ -363,15 +363,16 @@
 		<p>
 			"If EHRS decides that
 		there are some things that are safe, you can just wash it down with bleach,"
-		said Vice President for FRES Anne Papageorge.
+		Vice President for FRES Anne Papageorge said.
 			
 		</p>
 		<p>
 			Leo, another FRES
 		mechanic, told the DP about an incident he worked on with contractors on the
 		first floor of McClelland Hall in Ware College House. A sewage pipe had backed
-		up, spilling excrement all over the floor &mdash; as graphic photos on his phone
-		confirmed.
+		up, spilling excrement all over the floor, as graphic photos on his phone
+		confirmed. Leo also was not willing to share the photos publicly out of 
+		concerns for his own privacy.
 			
 		</p>
 		<p>
@@ -428,7 +429,7 @@
 			During the Sept. 17 job, Lou fought with his area manager over
 		whether or not to remove more drywall from behind the toilet. His boss wanted
 		to limit the drywall removed to just the patch where mold was originally seen.
-		Jim wanted a greater portion of the wall taken out to better triangulate the
+		Lou wanted a greater portion of the wall taken out to better triangulate the
 		source of the leak and to be especially sure that all signs of mold were gone.
 			
 		</p>
