--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -147,7 +147,7 @@
 		
 			<p>
 			n Wednesday, Sept. 17,
-		two plumbers from Penn Facilities and Real Estate services were alerted to a
+		two plumbers from Penn Facilities and Real Estate Services were alerted to a
 		leak in Sansom West.
 			
 		</p>
