--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -401,7 +401,7 @@
 			During the Sept. 17 job, Lou fought with his area manager over
 		whether or not to remove more drywall from behind the toilet. His boss wanted
 		to limit the drywall removed to just the patch where mold was originally seen.
-		Jim wanted a greater portion of the wall taken out to better triangulate the
+		Lou wanted a greater portion of the wall taken out to better triangulate the
 		source of the leak and to be especially sure that all signs of mold were gone.
 			
 		</p>
