--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -469,9 +469,9 @@
 			
 		</p>
 		<p>
-			<blockquote>"If I
+			<blockquote><center>"If I
 		were you, I would never drink from a water fountain here."
-			</blockquote>
+			</center></blockquote>
 		</p>
 
 		<p>
