--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -35,8 +35,7 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel=
     'stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Maven+Pro:500' rel='stylesheet' type='text/css'>
-	<link href='fonts/AndaleMono' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Maven+Pro:700' rel='stylesheet' type='text/css'>
     <meta charset="utf-8">
 
     <title>Maintenance Mayhem</title>
@@ -119,20 +118,23 @@
 				<img class="sectiontop" src="https://s3.amazonaws.com/media.dpn/48664_toiletspatgoodridgecutp.jpg">
 			</td>
 			<td class="title">
-				Part 2: No water, no heat
+				Part 2: Coming Tuesday
+				<!-- No water, no heat !-->
 			</td>
 			
 			<td class="pic">
 				<img class="sectiontop" src="https://s3.amazonaws.com/media.dpn/48665_movingoutananyachandraeditp.jpg">
 			</td>
 			<td class="title">
-				Part 3: Students displaced while maintenance waits
+				Part 3: Coming Wednesday
+				<!-- Students displaced while maintenance waits !-->
 			</td>
 			<td class="pic">
 				<img class="sectiontop" src="https://s3.amazonaws.com/media.dpn/48666_email_invoicesananyachandra_cutp.jpg">
 			</td>
 			<td class="title">
-				Part 4: Division and dysfunction
+				Part 4: Coming Thursday 
+				<!-- Division and dysfunction !-->
 			</td>
 
 		</tr>
@@ -500,6 +502,12 @@
 		Maintenance, also spoke critically of union workers' "groupthink" mentality.
 			
 		</p>
+		 
+		 <div id='div-gpt-ad-1424311669737-0' style='width:300px; height:300px; float:right; margin-right:10%; padding-left: 30px; padding-bottom:30px;'>
+		<script type='text/javascript'>
+		googletag.cmd.push(function() { googletag.display('div-gpt-ad-1424311669737-0'); });
+		</script>
+		</div>
 		<p>
 			"People just want to
 		perpetuate the old ideas and thoughts, rather than work together to improve
