--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -397,7 +397,7 @@
 				float:right;
 				padding-left:12px;
 				max-width:400px;
-				margin:5px" src="https://s3.amazonaws.com/media.dpn/48705_graphic_day_101f.jpg">
+				margin:5px" src="https://s3.amazonaws.com/media.dpn/48732_asdf1o.jpg">
 		</p>
 		<p>
 			During the Sept. 17 job, Lou fought with his area manager over
