added in certain buildings

--- a/maintenance-mayhem/index2.html
+++ b/maintenance-mayhem/index2.html
@@ -506,7 +506,7 @@
     <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
 		<p>
 			Despite the recent installation of "redundancies" in the water
-		systems, maintenance workers still expressed little faith in the system's
+		systems in certain buildings, maintenance workers still expressed little faith in the system's
 		ongoing capacity.
 			
 		</p>
