--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -377,7 +377,7 @@
 		<p>
 			The carpentry work had
 		to be contracted out for this case because the union carpenters had a backlog
-		of jobs, FRES Executive Director of Operations & Management Ken Ogawa said.
+		of jobs, FRES Executive Director of Operations and Maintenance Ken Ogawa said.
 			
 		</p>
 		<p>
