--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -498,7 +498,7 @@
 		</p>
 		<p>
 			Papageorge, who
-		oversees the five departments within FRES, including Operations &
+		oversees the five departments within FRES, including Operations and
 		Maintenance, also spoke critically of union workers' "groupthink" mentality.
 			
 		</p>
