--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -557,7 +557,7 @@
 		<div class="container">
 			<hr style="size:2"/>
 				<p><i>
-					Dan Spinelli is a sophomore from North Wales, Pennsylvania majoring in English with a concentration in creative writing. He is the City News Editor-elect of the Daily Pennsylvanian. 
+					Dan Spinelli is a sophomore from North Wales, Pennsylvania, majoring in English with a concentration in creative writing. He is the City News Editor-elect of The Daily Pennsylvanian. 
 			</i></p>
 		</div>
 	
