--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -144,7 +144,7 @@
     <div class="container">
 
 		<!-- this is the drop cap -->
-		<div style="float:left;color:##000000;font-size:57px;line-height:40px;padding-top:7px; padding-right:5px;font-family: Times, serif, Georgia;">O</div>
+		<div style="float:left;color:##000000;font-size:90px;line-height:60px;padding-top:7px; padding-right:5px;font-family: 'Maven Pro';">O</div>
 		<!-- drop cap end -->
 		
 			<p>
@@ -210,7 +210,7 @@
 			
 		</p>
 
-			<p style="text-align:center"><b> * * *</b></p>
+			<p class="divider"><b> * * *</b></p>
 
 		<p>
 			In interviews with FRES
