--- a/maintenance-mayhem/index2.html
+++ b/maintenance-mayhem/index2.html
@@ -109,26 +109,34 @@
 	</p>
 	<p style="font-size: 30px"> <strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;  By Dan Spinelli </strong> </p>
 	
-		<table width="100%" style="margin-left: 10px; margin-right: 10px; margin-top: 60px; display: block; table-layout:fixed;" > 
-			<tr style="font-size:30px;  display: block">
-				<td style="text-align:center; width: 10%;word-wrap: break-word" valign="bottom">
-					<div> <strong>Part 1</strong>  <br> Moldy Walls, Sour Management </div>
-					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48654_mushroom2patgoodridgeo.jpg">
-				</td>
-				<td style="text-align:center; width: 10%; word-wrap: break-word" valign="bottom">
-					<div> <strong>Part 2</strong> <br> No water, no heat</div>
-					<img style=" height: 250px; padding-bottom: 2%;  padding: 20px" src="https://s3.amazonaws.com/media.dpn/48657_toiletspatgoodridgeo.jpg">
-				</td>
-				<td style="text-align:center; width: 10%; word-wrap: break-word" valign="bottom">
-					<div> <strong>Part 3</strong> <br> Students displaced because of slow maintenance response times </div>
-					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48658_movingoutananyachandrao.jpg">
-				</td>
-				<td style="text-align:center; width: 10%; word-wrap: break-word" valign="bottom">
-					<div> <strong> Part 4</strong> <br> Division and dysfunction among maintenance staff </div>
-					<img style=" height: 250px; padding-bottom: 2%; padding: 20px" src="https://s3.amazonaws.com/media.dpn/48656_email_invoicesananyachandrao.jpg">
-				</td>
-			</tr>
-		</table>
+  <div class="container-fluid stories">
+    <div class="row">
+      <a href="index.html">
+        <div class="col-sm-3">
+          <img src="https://s3.amazonaws.com/media.dpn/48654_mushroom2patgoodridgep.jpg" class="img-responsive" />
+          <a class="title">Part 1: Moldy Walls, Sour Management</a>
+        </div>
+      </a>
+      <a href="index2.html">
+      <div class="col-sm-3">
+        <img src="https://s3.amazonaws.com/media.dpn/48664_toiletspatgoodridgecutp.jpg" class="img-responsive" />
+        <a class="title">Part 2: No Water, No Heat</a>
+      </div>
+      </a>
+      <!-- <a href="index3.html"> -->
+      <div class="col-sm-3">
+        <img src="https://s3.amazonaws.com/media.dpn/48665_movingoutananyachandraeditp.jpg" class="img-responsive" />
+        <a class="title">Part 3: Coming Wednesday </a>
+      </div>
+      <!-- </a> -->
+      <!-- <a href="index4.html"> -->
+        <div class="col-sm-3">
+          <img src="https://s3.amazonaws.com/media.dpn/48666_email_invoicesananyachandra_cutp.jpg" class="img-responsive" />
+          <a class="title">Part 4: Coming Thursday </a>
+      <!-- </a> -->
+      </div>
+    </div>
+  </div>
 		
     <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
 
