--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -114,11 +114,11 @@
       <div class="col-md-9 col-md-push-2" <div class="container">
 
         <!-- this is the drop cap -->
-        <div style="float:left;color:##000000;font-size:90px;line-height:60px;padding-top:7px; padding-right:5px;font-family: 'Maven Pro';">O</div>
+        <!-- <div style="float:left;color:##000000;font-size:90px;line-height:60px;padding-top:7px; padding-right:5px;font-family: 'Maven Pro';">O</div> -->
         <!-- drop cap end -->
 
         <p>
-          n Wednesday, Sept. 17, two plumbers from Penn Facilities and Real Estate Services were alerted to a leak in Sansom West.
+          <span class="dropcap">O</span>n Wednesday, Sept. 17, two plumbers from Penn Facilities and Real Estate Services were alerted to a leak in Sansom West.
 
         </p>
         <p>
