--- a/maintenance-mayhem/index2.html
+++ b/maintenance-mayhem/index2.html
@@ -139,16 +139,9 @@
   </div>
 		
     <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
-
-
-		<!-- part 2 !-->
-		<h2 style="text-align:center;padding-left:15%"> No water, no heat </h2>
-		<!-- this is the drop cap -->
-				<p style=
-				"float:left;color:##000000;font-size:57px;line-height:40px;padding-top:7px; padding-right:5px;font-family: Times, serif, Georgia;">O</p>
-				<!-- drop cap end -->
+      
 		<p>
-			n Halloween weekend,
+			<span class="dropcap">O</span>n Halloween weekend,
 		Rodin College House's water system offered far more tricks than treats.
 			
 		</p>
