--- a/maintenance-mayhem/index3.html
+++ b/maintenance-mayhem/index3.html
@@ -141,12 +141,8 @@
 		<h2 style="text-align:center;padding-left:15%"> Students displaced because of slow
 		maintenance response times </h2>
 
-		<!-- this is the drop cap -->
-				<p style=
-				"float:left;color:##000000;font-size:57px;line-height:40px;padding-top:7px; padding-right:5px;font-family: Times, serif, Georgia;">T</p>
-				<!-- drop cap end -->
 		<p>
-			he "drip-drip-drip"
+			<span class="dropcap">T</span>he "drip-drip-drip"
 		sound of falling water was College sophomore Amanda Silberling's first hint
 		that something was not right.
 			
