--- a/maintenance-mayhem/index4.html
+++ b/maintenance-mayhem/index4.html
@@ -141,13 +141,9 @@
 		<!-- part 1 !-->
 		<h2 style="text-align:center;padding-left:15%"> Division
 		and dysfunction among maintenance staff</h2>
-			
-		<!-- this is the drop cap -->
-				<p style=
-				"float:left;color:##000000;font-size:57px;line-height:40px;padding-top:7px; padding-right:5px;font-family: Times, serif, Georgia;">E</p>
-				<!-- drop cap end -->
+	
 		<p>
-			ach year, the staff
+			<span class="dropcap">E</span>ach year, the staff
 		members of Penn Facilities and Real Estate Services attend a mandatory meeting
 		(a "forced audience," as one employee calls it) in Houston Hall with Anne
 		Papageorge, the vice president for FRES.
