--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -404,19 +404,27 @@
         <p> "I put in a maintenance order for it this week," Lou said. "It should be done in a few days."
 
         </p>
+		
+		<br>
+		<br>
+		<br>
+		
+		
+          <p><b>____________________________________________________________________</b></p>
+		<p style="color:grey"><i>
+		
+				Dan Spinelli is a sophomore from North Wales, Pennsylvania majoring in English with a concentration in creative writing. He is the City News Editor-elect of the Daily Pennsylvanian. 
+		</i></p>
       </div>
       <br>
       <br>
 
-      </div>
-      <div class="container">
-        <hr style="size:2" />
-        <p><i>
-					Dan Spinelli is a sophomore from North Wales, Pennsylvania, majoring in English with a concentration in creative writing. He is the City News Editor-elect of The Daily Pennsylvanian. 
-			</i></p>
-      </div>
-
-      </div>
+      
+      
+     <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
+		
+		
+	</div>
 
       <br>
       <br>
