--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -83,10 +83,10 @@
               <a class="title">Part 1: Moldy Walls, Sour Management</a>
             </div>
           </a>
-          <!-- <a href="index2.html"> -->
+          <a href="index2.html">
           <div class="col-sm-3">
             <img src="https://s3.amazonaws.com/media.dpn/48664_toiletspatgoodridgecutp.jpg" class="img-responsive" />
-            <a class="title">Part 2: Coming Tuesday</a>
+            <a class="title">Part 2: No Water, No Heat</a>
           </div>
           <!-- </a> -->
           <!-- <a href="index3.html"> -->
