--- a/maintenance-mayhem/index2.html
+++ b/maintenance-mayhem/index2.html
@@ -84,10 +84,10 @@
               <a class="title">Part 1: Moldy Walls, Sour Management</a>
             </div>
           </a>
-          <!-- <a href="index2.html"> -->
+          <a href="index2.html">
           <div class="col-sm-3">
             <img src="https://s3.amazonaws.com/media.dpn/48664_toiletspatgoodridgecutp.jpg" class="img-responsive" />
-            <a class="title">Part 2: Coming Tuesday</a>
+            <a class="title">Part 2: No Water, No Heat</a>
           </div>
           <!-- </a> -->
           <!-- <a href="index3.html"> -->
@@ -165,11 +165,7 @@
 		mezzanine.		
 		</p>
 	
-	<div style="float:right; padding-right: 30%; padding-left: 30px; padding-bottom: 30px">
-		<video height="600px" autoplay loop style="float:right">
-			<source src="https://s3.amazonaws.com/media.dpn/48672_imrancronkfbdownneto.mp4" type="video/mp4">
-		</video> 
-	</div>
+	<iframe width="1280" height="720" src="https://www.youtube.com/embed/Kc1kdSBrM38" frameborder="0" allowfullscreen></iframe>
 
 			
 		</p>
@@ -333,7 +329,6 @@
 			}(document));
 		</script>
 		<p>
-			
 		</p>
 		<p>
 			Other mechanics have also reached out to Ogawa directly in an
@@ -487,7 +482,7 @@
 		</center>
 		<br>
 	</div>
-    <div class="container" style="margin-left: 10%; padding-right: 10%; padding-top: 30px; position: relative">
+    <div class="col-md-9 col-md-push-2" <div class="container">
 		<p>
 			Despite the recent installation of "redundancies" in the water
 		systems in certain buildings, maintenance workers still expressed little faith in the system's
@@ -583,11 +578,13 @@
 		issues for as long as [they] can."
 			
 		</p>
+		<div class="col-md-9 col-md-push-2" <div class="container">
 		<p>
-			<blockquote>"The problem with the high rises and the hot water was
+			<blockquote">"The problem with the high rises and the hot water was
 		shit-poor engineering," Jim said."
 			</blockquote>
 		</p>
+		</div>
 		<p>
 			Jim's frustration
 		boiled over in a conversation with Mike Francis, another shift operations
@@ -628,6 +625,7 @@
 		something else," Jim said.
 			
 		</p>
+		
 		<p>
 			<p style="text-align:center"><b> * * *</b></p>
 		</p>
