--- a/maintenance-mayhem/index2.html
+++ b/maintenance-mayhem/index2.html
@@ -578,13 +578,12 @@
 		issues for as long as [they] can."
 			
 		</p>
-		<div class="col-md-9 col-md-push-2" <div class="container">
+		
 		<p>
-			<blockquote">"The problem with the high rises and the hot water was
+			<blockquote>"The problem with the high rises and the hot water was
 		shit-poor engineering," Jim said."
 			</blockquote>
 		</p>
-		</div>
 		<p>
 			Jim's frustration
 		boiled over in a conversation with Mike Francis, another shift operations
