--- a/maintenance-mayhem/index2.html
+++ b/maintenance-mayhem/index2.html
@@ -470,7 +470,7 @@
 		</p>
 		<p>
 			It was unclear why
-		Papageorge was not aware of the conversation among her underlings about
+		Papageorge was not aware of the conversation among her managers about
 		possible repairs to the water system.			
 		</p>
 
@@ -586,12 +586,11 @@
 		</p>
 		<p>
 			Jim's frustration
-		boiled over in a conversation with Mike Francis, another shift operations
-		supervisor.
+		boiled over in a conversation with Mike Francis.
 			
 		</p>
 		<p>
-			"‘Would it be
+			"'Would it be
 		acceptable for you guys to wait six days for a service mechanic?'" Jim recalls
 		asking. Francis deferred comment to a FRES spokeswoman, who did not return
 		multiple emails.
