--- a/maintenance-mayhem/index2.html
+++ b/maintenance-mayhem/index2.html
@@ -68,7 +68,7 @@
       </nav>
 
       <div class="header">
-        <img width="100%" height="100%" src="img/cover1.png"></img>
+        <img width="100%" height="100%" src="https://s3.amazonaws.com/media.dpn/48780_maintenancetop101o.jpg"></img>
         <!-- <video width="100%" height="100%" autoplay>
                 <source src="https://s3.amazonaws.com/media.dpn/46270_final_no_sound_street_coke_title_clipo.mp4" type="video/mp4">
             </video> 
@@ -187,6 +187,7 @@
 		installed in the new college house on Hill Field.
 			
 		</p>
+		
 		<p>
 			Students reporting no
 		heat in their rooms face a more perilous bureaucratic problem: a tight budget.
@@ -286,6 +287,14 @@
 		they have yet to propose a solution.
 			
 		</p>
+		<div id='div-gpt-ad-1424311669737-0' style='width:300px; height:300px; float:right; margin-right:10%; padding-left: 30px; padding-bottom:30px;'>
+          <script type='text/javascript'>
+            googletag.cmd.push(function() {
+              googletag.display('div-gpt-ad-1424311669737-0');
+            });
+
+          </script>
+        </div>
 		<p>
 			"Each time we think
 		we've fixed it, we haven't fixed it," Ogawa said in an interview.
@@ -314,20 +323,10 @@
 			
 		</p>
 
-		<div class="piktowrapper-embed" pikto-uid="9288264-why-do-water-shortages-happen" >
-			<div class="pikto-canvas-wrap">
-				<div class="pikto-canvas"></div>
-			</div>
-		</div>
-		<script>
-			(function(d){
-				var js, id="pikto-embed-js", ref=d.getElementsByTagName("script")[0];
-				if (d.getElementById(id)) { return;}
-				js=d.createElement("script"); js.id=id; js.async=true;
-				js.src="https://magic.piktochart.com/assets/embedding/embed.js";
-				ref.parentNode.insertBefore(js, ref);
-			}(document));
-		</script>
+		<p>
+			<img style="max-width:400px; float: right"src="https://s3.amazonaws.com/media.dpn/48779_graphic_day_2o.jpg">
+		</p>
+			
 		<p>
 		</p>
 		<p>
@@ -641,6 +640,14 @@
 		contribute to growing tension between managers and workers.
 			
 		</p>
+		<div id='div-gpt-ad-1424311669737-0' style='width:300px; height:300px; float:right; margin-right:10%; padding-left: 30px; padding-bottom:30px;'>
+          <script type='text/javascript'>
+            googletag.cmd.push(function() {
+              googletag.display('div-gpt-ad-1424311669737-0');
+            });
+
+          </script>
+        </div>
 		<p>
 			
 		</p>
