--- a/maintenance-mayhem/index2.html
+++ b/maintenance-mayhem/index2.html
@@ -154,13 +154,13 @@
 		</p>
 		<p>
 			During the late fall and early winter months, leaks, water
-		outages and broken radiators are regular complaints in Penn College Houses due
-		to the frequency of broken and frozen pipes.
+		outages and broken radiators are regular complaints in the Penn College 
+		House system due to the frequency of broken and frozen pipes.
 			
 		</p>
 		<p>
 			This past month alone,
-		Rodin and Harnwell College House were affected by multiple water shortages &mdash;
+		Rodin and Harnwell College Houses were affected by multiple water shortages &mdash;
 		including, most severely, water from a sewage leak dripping into Harnwell's
 		mezzanine.		
 		</p>
@@ -173,7 +173,7 @@
 			These frequent mishaps &mdash; usually written off in emails to
 		residents as the fault of a leaky valve or broken pipe &mdash; are endemic to a
 		broader neglect of infrastructure within college houses, according to
-		interviews with eight FRES workers, some with decades of experience responding
+		interviews with 10 FRES workers, some with decades of experience responding
 		to maintenance requests from students.
 			
 		</p>
@@ -219,14 +219,14 @@
 			
 		</p>
 		<p>
-			A DP article from Nov.
+			A Daily Pennsylvanian article from Nov.
 		20 reported three hot water shortages in Rodin College House, including two
 		instances where the whole building lost hot water.
 			
 		</p>
 		<p>
 			<strong></strong>The article quoted FRES Executive Director
-		of Operations & Management Ken Ogawa saying, "Ongoing maintenance and repairs such as
+		of Operations and Maintenance Ken Ogawa saying, "Ongoing maintenance and repairs such as
 		these are usual in a building that is 40 years old and houses more than 750
 		people."
 			
@@ -252,7 +252,7 @@
 		<p>
 			"They did [the
 		buildings] in stages so they put the same system in each of the high rises. And
-		in all three buildings the systems they put in are just horrible," Jim said.
+		in all three buildings, the systems they put in are just horrible," Jim said.
 			
 		</p>
 		<p>
@@ -277,7 +277,7 @@
 			
 		</p>
 		<p>
-			He deferred comment to
+			Ostrander deferred comment to
 		a FRES spokeswoman, who declined to comment on his behalf.
 			
 		</p>
@@ -309,7 +309,7 @@
 		</p>
 		<p>
 			"[Ogawa's] response
-		was, ‘The building has an old system and it's a 45-year-old building.' The
+		was, ‘The building has an old system, and it's a 45-year-old building.' The
 		building itself [is old], but it's just been renovated. All mechanicals and all
 		the systems are less than 10 years old," Jim said.
 			
@@ -338,7 +338,7 @@
 		<p>
 			"[Ogawa] kept telling
 		me, ‘My engineers say it's this.' I kept saying, ‘It's not that.' So two weeks
-		later, [Ogawa] said, ‘The hot water's out,' and I said, ‘Go frig yourself and
+		later, [Ogawa] said, ‘The hot water's out,' and I said, ‘Go frig yourself, and
 		call your engineer,'" Lou recalls. "[Ogawa] called me an asshole, basically,
 		because I told him it's not that."
 			
@@ -351,7 +351,7 @@
 		</p>
 		<p>
 			"We don't believe it's
-		a material condition issue, but haven't figured out what the problem is," he
+		a material condition issue but haven't figured out what the problem is," he
 		said, adding that mechanics and contractors have both made a "number of
 		repairs" in the buildings.
 			
@@ -365,7 +365,7 @@
 		<p>
 			There is hardly a consensus
 		among University administrators on whether there even is a problem with the
-		water system in the high rises, and if so, how to address it.
+		water system in the high rises and, if so, how to address it.
 			
 		</p>
 		<p>
@@ -373,7 +373,7 @@
 		problem may be related to the division of budgets within Penn Business
 		Services, which hires FRES to perform repairs in residential buildings. There
 		are separate budgets for "maintenance and renovation" and "capital projects." 
-		Penn spent $350 million in the last twelve years on capital projects for 
+		Penn spent $350 million in the last 12 years on capital projects for 
 		residential buildings, Executive Director of Business Services Doug Berger 
 		said, though it was unclear if this value included extra-budgetary investments. 
 		
@@ -407,15 +407,15 @@
 		</p>
 		<p>
 			Penn Business Services
-		has not received a request from Ogawa, or anyone else from FRES Operations
-		& Maintenance, to devote more money to fixing the water system in any
+		has not received a request from Ogawa, or anyone else from FRES Operations 
+		and Maintenance, to devote more money to fixing the water system in any
 		building.
 			
 		</p>
 		<p>
 			"I haven't had him come
-		[ask for money] for Harrison," Executive Director for Penn Business Services
-		Doug Berger said. "They're still evaluating what it may take [financially]."
+		[ask for money] for Harrison," Berger said. "They're still evaluating 
+		what it may take [financially]."
 			
 		</p>
 		<p>
@@ -507,8 +507,8 @@
 		</p>
 		<p>
 			The system is clearly
-		complex, but no one seems to be able &mdash; even after years of maintenance repairs
-		&mdash; to get a handle on possible solutions.
+		complex, but no one seems to be able to &mdash; even after years of maintenance repairs
+		&mdash; get a handle on possible solutions.
 			
 		</p>
 		<p>
@@ -531,7 +531,7 @@
 		<p>
 			"We're the ones that
 		have to keep going back in the same buildings with the same kids three or four
-		times and it's just like, how many times can we apologize? My heart goes out to
+		times, and it's just like, how many times can we apologize? My heart goes out to
 		these kids because their parents are paying so much to live here," Jim said.
 			
 		</p>
@@ -572,7 +572,7 @@
 		</p>
 		<p>
 			"They're looking at our
-		budgets and wondering: how can we keep this down?" Jim said. "[They] won't give
+		budgets and wondering: How can we keep this down?" Jim said. "[They] won't give
 		[us] any overtime. [They'll] just keep deferring maintenance and putting off
 		issues for as long as [they] can."
 			
@@ -603,13 +603,13 @@
 		</p>
 		<p>
 			Jim followed up on his
-		concerns with Ostrander, but was again rebuffed due to budgetary constrictions.
+		concerns with Ostrander but was again rebuffed due to budgetary constrictions.
 		He was enraged, he said, to hear in June that the budget had a $90,000 surplus.
 			
 		</p>
 		<p>
 			Ogawa denied that any
-		maintenance requests are delayed or ignored because of budgetary concerns, but
+		maintenance requests are delayed or ignored because of budgetary concerns but
 		admitted that budgetary projections in the winter may not align to the result
 		at the end of the fiscal year in June. He confirmed that the past year did run
 		a minimal surplus.
@@ -618,7 +618,7 @@
 		<p>
 			"They stockpile it all
 		year long. They scrimp and save by not providing the students the service that
-		they paid for. And cause unhealthy conditions, and then they use that money for
+		they paid for and cause unhealthy conditions, and then they use that money for
 		something else," Jim said.
 			
 		</p>
@@ -636,7 +636,7 @@
 		</p>
 		<p>
 			Frustrated employees
-		may jump the chain of command straight to Ogawa, which he admits, may
+		may jump the chain of command straight to Ogawa which, he admits, may
 		contribute to growing tension between managers and workers.
 			
 		</p>
