--- a/maintenance-mayhem/index2.html
+++ b/maintenance-mayhem/index2.html
@@ -572,8 +572,8 @@
 		</p>
 		<p>
 			"They're looking at our
-		budgets and wondering: How can we keep this down?" Jim said. "[They] won't give
-		[us] any overtime. [They'll] just keep deferring maintenance and putting off
+		budgets and wondering: How can we keep this down?" Jim said. 
+		"[They] won't give [us] any overtime. [They'll] just keep deferring maintenance and putting off
 		issues for as long as [they] can."
 			
 		</p>
