--- a/maintenance-mayhem/index3.html
+++ b/maintenance-mayhem/index3.html
@@ -186,27 +186,27 @@
 			
 		</p>
 		<p>
-			However, the ten
+			However, the 10
 		employees interviewed referred to numerous examples where management
-		specifically told them to "wait until tomorrow" to respond or to in some cases,
+		specifically told them to "wait until tomorrow" to respond or to, in some cases,
 		blatantly ignore leaks.
 			
 		</p>
 		<p>
 			Jim, a FRES mechanic
-		with decades of experience, said he was told to ignore a leak in Sansom Place
-		East College House that occurred near the end of a workday.
+		with decades of experience, said he was told to ignore a leak in Sansom 
+		East that occurred near the end of a workday.
 			
 		</p>
 		<p>
 			"[FRES] didn't want
-		anybody to stay to fix this thing and make the repair. So they said, ‘let it go
+		anybody to stay to fix this thing and make the repair. So they said, ‘Let it go
 		until tomorrow,'" he recalled.
 			
 		</p>
 		<p>
 			FRES employees said the
-		reasons managers didn't want them to stay late was so they wouldn't have to be
+		reason managers didn't want them to stay late was so they wouldn't have to be
 		paid overtime.
 			
 		</p>
@@ -223,9 +223,9 @@
 		</p>
 		<p>
 			Two students living in the room above Silberling were
-		displaced and she was moved into a single room in Fisher, but was told she
-		would only be there for about a week. She didn't return to her original room
-		for over a month.
+		displaced, and she was moved into a single room in Fisher. She was told she
+		would only be there for about a week; she didn't return to her original room
+		until a month later.
 			
 		</p>
 		<p>
@@ -260,14 +260,14 @@
 		</p>
 		<p>
 			Cadwallader and Daniel
-		reported the initial leak the day it happened, but never pressed the issue with
+		reported the initial leak the day it happened but never pressed the issue with
 		FRES because the leak appeared to dry up. Only after water started gashing
 		through their ceiling, and in other rooms on their floor, did FRES finally
 		respond to their maintenance request.
 			
 		</p>
 		<p>
-			Around ten people on
+			Around 10 people on
 		their floor and the floor above them were displaced by the leak, they recalled.
 			
 		</p>
@@ -279,7 +279,7 @@
 		</p>
 		<p>
 			FRES Executive Director
-		of Operations & Management Ken Ogawa said there is a "significant backlog"
+		of Operations and Maintenance Ken Ogawa said there is a "significant backlog"
 		of maintenance requests.
 			
 		</p>
@@ -306,9 +306,9 @@
 		<p>
 			According to statistics
 		provided by FRES, plumbing orders &mdash; encompassing leaks, some of the most
-		troublesome maintenance problems &mdash; averaged response times of just under 20
-		days in the 2011 fiscal year. This past fiscal year, the average response time
-		was just under 10 days.
+		troublesome maintenance problems &mdash; averaged response times of 19
+		days in the 2011 fiscal year. This past fiscal year, the average response time 
+		was nine days.
 			
 		</p>
 		<p>
@@ -376,7 +376,7 @@
 
 		<p>
 			Another decried
-		management tactic is to prioritize maintenance complaints, however small or
+		management tactic is prioritizing maintenance complaints, however small or
 		insignificant, based on whether the students' parents call FRES about the
 		issue.
 			
@@ -435,7 +435,7 @@
 		</p>
 		<p>
 			Silberling was also
-		reimbursed for damaged items, and mechanics had to replace her entire wood
+		reimbursed for damaged items, and mechanics had to replace her entire wooden
 		floor and parts of the ceiling and walls.
 			
 		</p>
@@ -447,7 +447,7 @@
 		</p>
 		<p>
 			FRES' "wait until
-		tomorrow" mantra doesn't seem to have saved them money, and has only angered
+		tomorrow" mantra doesn't seem to have saved them money and has only angered
 		displaced students.
 			
 		</p>
