added new header and mostly done now

--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -88,13 +88,13 @@
             <img src="https://s3.amazonaws.com/media.dpn/48664_toiletspatgoodridgecutp.jpg" class="img-responsive" />
             <a class="title">Part 2: No Water, No Heat</a>
           </div>
-          <!-- </a> -->
-          <!-- <a href="index3.html"> -->
+          </a>
+          <a href="index3.html"> 
           <div class="col-sm-3">
             <img src="https://s3.amazonaws.com/media.dpn/48665_movingoutananyachandraeditp.jpg" class="img-responsive" />
-            <a class="title">Part 3: Coming Wednesday </a>
+            <a class="title">Part 3: Leaking Walls and Slow Response Times </a>
           </div>
-          <!-- </a> -->
+          </a>
           <!-- <a href="index4.html"> -->
             <div class="col-sm-3">
               <img src="https://s3.amazonaws.com/media.dpn/48666_email_invoicesananyachandra_cutp.jpg" class="img-responsive" />
