--- a/maintenance-mayhem/index3.html
+++ b/maintenance-mayhem/index3.html
@@ -112,9 +112,6 @@
       <br>
       <br>
       <div class="col-md-9 col-md-push-2" <div class="container">
-		<!-- part 1 !-->
-		<h2 style="text-align:center;padding-left:15%"> Students displaced because of slow
-		maintenance response times </h2>
 
 		<p>
 			<span class="dropcap">T</span>he "drip-drip-drip"
@@ -146,9 +143,7 @@
 		maintenance came, half of our room was being flooded," Silberling said.
 			
 		</p>
-		<p>
-			
-		</p>
+		<p class="divider"><b> * * *</b></p>
 		<p>
 			<h2>‘Wait until tomorrow'</h2>
 		</p>
@@ -286,6 +281,7 @@
 		was nine days.
 			
 		</p>
+		<p class="divider"><b> * * *</b></p>
 		<p>
 			<h2> Deferring maintenance</h2>
 		</p>
@@ -389,7 +385,9 @@
 		<p>
 			
 		</p>
-		<h2> Financial toll for Penn, mental toll for students </h2>
+		
+		<p class="divider"><b> * * *</b></p>
+		<h2> Financial toll for Penn, <br> mental toll for students </h2>
 		<p>
 			<strong></strong>
 		</p>
@@ -415,7 +413,7 @@
 			
 		</p>
 		<p>
-			<blockquote> "There are times where we say, ‘Yeah it doesn't need to
+			<blockquote style="width:900px"> "There are times where we say, ‘Yeah it doesn't need to
 		be done on overtime. We'll do it on Monday.'" -Vice President for FRES Anne
 		Papageorge </blockquote>
 			
