--- a/maintenance-mayhem/index3.html
+++ b/maintenance-mayhem/index3.html
@@ -344,7 +344,14 @@
 		deferring problems just creates more costs down the line if leaks worsen.
 			
 		</p>
+		<div id='div-gpt-ad-1424311669737-0' style='width:300px; height:300px; float:right; margin-right:10%; padding-left: 30px; padding-bottom:30px;'>
+          <script type='text/javascript'>
+            googletag.cmd.push(function() {
+              googletag.display('div-gpt-ad-1424311669737-0');
+            });
 
+          </script>
+        </div>
 		<p>
 			Another decried
 		management tactic is prioritizing maintenance complaints, however small or
@@ -398,6 +405,7 @@
 		students for damaged belongings.
 			
 		</p>
+		
 		<p>
 			Penn paid for
 		Cadwallader and Daniel to stay in the Sheraton Hotel for a week, compensated
@@ -436,7 +444,14 @@
 		for Penn, they also inconvenience students by having them undergo a
 		time-consuming, bothersome and stressful moving process.
 			
-		</p>
+		</p><div id='div-gpt-ad-1424311669737-0' style='width:300px; height:300px; float:right; margin-right:10%; padding-left: 30px; padding-bottom:30px;'>
+          <script type='text/javascript'>
+            googletag.cmd.push(function() {
+              googletag.display('div-gpt-ad-1424311669737-0');
+            });
+
+          </script>
+        </div>
 		<p>
 			
 		</p>
