changed "Chesnut" to "Chesnut"

--- a/maintenance-mayhem/index3.html
+++ b/maintenance-mayhem/index3.html
@@ -121,7 +121,7 @@
 		</p>
 		<p>
 			Silberling, then a
-		freshman in a double room in the Chestnut hall of Ware College House, looked
+		freshman in a double room in the Chesnut hall of Ware College House, looked
 		over to see a stream of water falling on her roommate's bed.
 			
 		</p>
