incorporated copy changes

--- a/maintenance-mayhem/index4.html
+++ b/maintenance-mayhem/index4.html
@@ -157,7 +157,7 @@
 			
 		</p>
 		<p>
-			For the ten FRES
+			For the 10 FRES
 		workers interviewed by The Daily Pennsylvanian, the meeting with Papageorge epitomizes
 		their perception of management: purveyors of cheap platitudes that skimp on
 		essential equipment and infrastructure to help Penn's bottom line. 
@@ -187,7 +187,7 @@
 		<p>
 			"No matter what we tell
 		them, they think we're lying," said Mike Patruno, a recently retired FRES
-		mechanic, who like Jim, has decades of experience at Penn.
+		mechanic, who, like Jim, has decades of experience at Penn.
 			
 		</p>
 		<p>
@@ -395,8 +395,8 @@
 		</p>
 		<p>
 			According to Mike
-		Patruno, a recently retired FRES mechanic, Francis had a $5,000 budget that
-		workers were not allowed to go over in the summer.
+		Patruno, Francis had a $5,000 budget that workers were 
+		not allowed to go over in the summer.
 			
 		</p>
 		<p>
@@ -413,7 +413,7 @@
 			</blockquote>
 		</p>
 		<p>
-			"We have 3 to 4 guys
+			"We have three to four guys
 		that go through 700 fan coil units, changing filters, making repairs and
 		cleaning, vacuuming and sanitizing units," Jim said. "There's no time for
 		maintenance in a 40-hour work week."
