shortened SPW to just Sansom West

--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -305,7 +305,7 @@
 
         </p>
         <p>
-          In this particular mold case, he believes that incomplete work by contractors was not only unsafe for other workers, but also prevented him from completely fixing the leak. Lou is now working on stopping another leak in the same room in Sansom Place West,
+          In this particular mold case, he believes that incomplete work by contractors was not only unsafe for other workers, but also prevented him from completely fixing the leak. Lou is now working on stopping another leak in the same room in Sansom West,
           which he believes stemmed from the leak that spurred the mold infestation in September.
 
         </p>
