updated patruno description

--- a/maintenance-mayhem/index2.html
+++ b/maintenance-mayhem/index2.html
@@ -502,7 +502,8 @@
 			"They're not set up for
 		continuous use. In an office building where you don't use them much, they're
 		fine. But they don't work for a 20-story building with high demand. It's just
-		proven. They don't work," said recently retired FRES mechanic Mike Patruno.
+		proven. They don't work," said FRES mechanic Mike Patruno, currently on medical
+		leave from work.
 			
 		</p>
 		<p>
