updated patruno description

--- a/maintenance-mayhem/index4.html
+++ b/maintenance-mayhem/index4.html
@@ -186,7 +186,7 @@
 		</p>
 		<p>
 			"No matter what we tell
-		them, they think we're lying," said Mike Patruno, a recently retired FRES
+		them, they think we're lying," said Mike Patruno, a FRES
 		mechanic, who, like Jim, has decades of experience at Penn.
 			
 		</p>
