--- a/maintenance-mayhem/index4.html
+++ b/maintenance-mayhem/index4.html
@@ -376,7 +376,7 @@
 		</p>
 		<p>
 			According to Mike
-		Patruno, a recently retired FRES mechanic, Francis had a $5,000 budget that
+		Patruno, a FRES mechanic on medical leave, Francis had a $5,000 budget that
 		workers were not allowed to go over in the summer.
 			
 		</p>
