changed patruno description

--- a/maintenance-mayhem/index4.html
+++ b/maintenance-mayhem/index4.html
@@ -157,8 +157,9 @@
 		</p>
 		<p>
 			"No matter what we tell
-		them, they think we're lying," said Mike Patruno, a recently retired FRES
-		mechanic, who like Jim, has decades of experience at Penn.
+		them, they think we're lying," said Mike Patruno, a FRES
+		mechanic currently on leave for medical reasons, who like Jim, 
+		has decades of experience at Penn.
 			
 		</p>
 		<p>
