--- a/maintenance-mayhem/index3.html
+++ b/maintenance-mayhem/index3.html
@@ -96,11 +96,11 @@
             <a class="title">Part 3: Leaking Walls and Slow Response Times </a>
           </div>
           </a>
-          <!-- <a href="index4.html"> -->
+          <a href="index4.html">
             <div class="col-sm-3">
               <img src="https://s3.amazonaws.com/media.dpn/48666_email_invoicesananyachandra_cutp.jpg" class="img-responsive" />
-              <a class="title">Part 4: Coming Thursday </a>
-          <!-- </a> -->
+              <a class="title">Part 4: A Staff Divided Against Itself </a>
+          </a>
           </div>
         </div>
       </div>
