--- a/advertising/index.html
+++ b/advertising/index.html
@@ -13,6 +13,25 @@
 
 <body>
     <div class="container">
+      <div class="row">
+        <center class="twelve columns">
+          <script type="text/javascript">
+            google_ad_client = "pub-1146947442890318";
+            google_ad_width = 728;
+            google_ad_height = 90;
+            google_ad_format = "728x90_as";
+            google_ad_type = "image";
+            google_ad_channel = "";
+            google_color_border = "cccccc";
+            google_color_bg = "cccccc";
+            google_color_link = "cccccc";
+            google_color_text = "cccccc";
+            google_color_url = "FFFFFF";
+            google_ui_features = "rc:0";
+          </script>
+          <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+        </center>
+      </div>
         <header class="row">
             <a class="three columns logo-area" href="http://www.thedp.com/">
                 <center>
@@ -1011,6 +1030,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
     <script src="js/script.js" charset="utf-8"></script>
+    
 </body>
 
 </html>
