--- a/advertising/index.html
+++ b/advertising/index.html
@@ -13,8 +13,9 @@
 
 <body>
     <div class="container">
+      <!-- AD UNIT -->
       <div class="row">
-        <center class="twelve columns">
+        <center class="twelve columns leaderboard">
           <script type="text/javascript">
             google_ad_client = "pub-1146947442890318";
             google_ad_width = 728;
@@ -32,11 +33,12 @@
           <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
         </center>
       </div>
+      <!-- /AD UNIT -->
         <header class="row">
             <a class="three columns logo-area" href="http://www.thedp.com/">
                 <center>
                     <i class="fa fa-chevron-left"></i>
-                    <img src="img/DPLogo.png" alt="DP Logo" /> Return to The DP
+                    <img src="img/DPLogo.png" alt="DP Logo"/> <span class="return-text">Return to The DP</span>
                 </center>
             </a>
             <nav class="nine columns">
@@ -68,6 +70,11 @@
             <div class="row">
                 <div class="nine columns dp-text-1">
                     <h1>The Best Way to Reach Penn</h1>
+                    <h6>
+                      <a href="https://s3.amazonaws.com/media.dpn/46668_dp20152016_ratebooko.pdf">
+                        <span class="fa fa-arrow-down"></span> Download our Rate Card <i>(PDF, 1.7mb)</i>
+                      </a>
+                    </h6>
                     <p>
                         We are The Daily Pennsylvanian, the newspaper by and for the students of the University of Pennsylvania. When our readers open “the DP” every morning, they open a world of campus and city news, feature stories, sports, commentary, advertising, and much more. Whether in our daily newspaper, our weekly magazine, our special issues, or our websites, The Daily Pennsylvanian is the first read for the Penn community.
                     </p>
@@ -183,10 +190,34 @@
                 <p>
                     Our flagship publication, The Daily Pennsylvanian, is the award-winning daily student newspaper at the University of Pennsylvania. The Daily Pennsylvanian is frequently recognized as one of the top college newspapers in the country. The DP delivers to the Penn community local, relevant campus news, sports and commentary — plus the New York Times crossword puzzle, Sudoku, and hundreds of ads for products and services.
                 </p>
+                <h5>Special Issues</h5>
+                <p>
+                  The Daily Pennsylvanian and 34th Street Magazine publish a variety of special issues that correspond to seasonal and Penn events. From introductory new student and backto-school editions to end-of-semester finals issues, from football and basketball season previews to guides to Philadelphia dining and off-campus living, these issues off er advertisers an opportunity to reach an affl uent and targeted audience.
+                </p>
             </div>
             <div class="three columns">
-                <img src="img/thumbs/dpThumb1.jpeg" class="img-responsive shaddow"/>           
+                <img src="img/thumbs/dpThumb1.jpeg" class="img-responsive shaddow"/>         
             </div>
+        </div>
+        <div class="row">
+            <a href="https://s3.amazonaws.com/media.dpn/46729_fall_dining_guideemailo.pdf">
+              <center class="four columns">
+                <img src="img/diningspecial.jpg" class="img-responsive shaddow special"/>     
+                <h6><span class="fa fa-arrow-down"></span> Dining Guide Information</h6>
+              </center>
+            </a>
+            <a href="https://s3.amazonaws.com/media.dpn/46741_housing_guide_emailo.pdf">
+              <center class="four columns ">
+                <img src="img/housingspecial.jpg" class="img-responsive shaddow special"/>     
+                <h6><span class="fa fa-arrow-down"></span> Housing Guide Information</h6>
+              </center>
+            </a>
+            <a href="https://s3.amazonaws.com/media.dpn/47096_basketball_preview_2015o.pdf">
+              <center class="four columns ">
+                <img src="img/bballspecial.jpg" class="img-responsive shaddow special"/>
+                <h6><span class="fa fa-arrow-down"></span> Basketball Preview Information</h6>
+              </center>
+            </a>
         </div>
         <div class="row">
             <div class="three columns push-left">
@@ -213,26 +244,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="three columns push-left">
-                <br>
-                <img src="img/32thst.jpg" class="img-responsive shaddow"/>
-            </div>
+          <div class="three columns">
+              <img src="img/summerpenn.jpg" class="img-responsive shaddow"/>
+          </div>
             <div class="nine columns push-left">
-                <h3>Special Issues</h3>
-                <p>
-                    The Daily Pennsylvanian and 34th Street Magazine publish a variety of special issues that correspond to seasonal and Penn events. From introductory new student and backto-school editions to end-of-semester finals issues, from football and basketball season previews to guides to Philadelphia dining and off-campus living, these issues off er advertisers an opportunity to reach an affl uent and targeted audience.
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="nine columns">
                 <h3>The Summer Pennsylvanian</h3>
                 <p>
                     Th ere are nearly 10,000 students, administrators, faculty, and staff who remain on Penn’s campus during the summer, working and/or participating in classes. The Summer Pennsylvanian, with a circulation of 4,000 copies distributed free on Th ursdays at approximately 45 campus-area locations, helps them beat the Philadelphia heat. As the only weekly campus publication during the summer session, The Summer Pennsylvanian off ers coverage of campus news and events, plus a weekly guide to Philadelphia’s summer entertainment scene.
                 </p>
-            </div>
-            <div class="three columns">
-                <img src="img/summerpenn.jpg" class="img-responsive shaddow"/>
             </div>
         </div>
     </section>
