--- a/advertising/index.html
+++ b/advertising/index.html
@@ -79,9 +79,7 @@
                         We are The Daily Pennsylvanian, the newspaper by and for the students of the University of Pennsylvania. When our readers open “the DP” every morning, they open a world of campus and city news, feature stories, sports, commentary, advertising, and much more. Whether in our daily newspaper, our weekly magazine, our special issues, or our websites, The Daily Pennsylvanian is the first read for the Penn community.
                     </p>
                     <p>
-                        In an era when we often hear about the struggles of mass-market commercial newspapers and about students only getting their information online, The Daily Pennsylvanian thrives as a community newspaper because we remain relevant to our audience of devoted
-                        readers. And for our advertisers, that’s why we are a proven and eff ective way — and still the best way — to reach Penn. We off er multiple media in print, online and out-of-home that reach diff erent segments of the Penn
-                        market, from students to faculty and staff to parents and alumni, allowing you to choose the medium or media mix that best suits your advertising needs.
+                        In an era when we often hear about the struggles of mass-market commercial newspapers and about students only getting their information online, The Daily Pennsylvanian thrives as a community newspaper because we remain relevant to our audience of devoted readers. And for our advertisers, that’s why we are a proven and eff ective way — and still the best way — to reach Penn. We off er multiple media in print, online and out-of-home that reach diff erent segments of the Penn market, from students to faculty and staff to parents and alumni, allowing you to choose the medium or media mix that best suits your advertising needs.
                     </p>
 
                     <h3>The Penn Market</h3>
