--- a/advertising/index.html
+++ b/advertising/index.html
@@ -233,7 +233,7 @@
             <div class="nine columns">
                 <h3>34<sup>th</sup> Street Magazine</h3>
                 <p>
-                    Read by more students than any other magazine* on the Penn campus, 34th Street is the award-winning Th ursday arts, entertainment, and culture magazine section of The Daily Pennsylvanian. It prepares readers for the weekend with the latest music, fi lm, and restaurant reviews, as well as engages them with in-depth feature stories and entertains them with humor.
+                    Read by more students than any other magazine on the Penn campus, 34th Street is the award-winning Th ursday arts, entertainment, and culture magazine section of The Daily Pennsylvanian. It prepares readers for the weekend with the latest music, film, and restaurant reviews, as well as engages them with in-depth feature stories and entertains them with humor.
                 </p>
             </div>
             <div class="three columns">
@@ -243,13 +243,24 @@
         </div>
         <div class="row">
           <div class="three columns">
-              <img src="img/summerpenn.jpg" class="img-responsive shaddow"/>
+              <img src="img/utb.png" class="img-responsive shaddow"/>
           </div>
             <div class="nine columns push-left">
-                <h3>The Summer Pennsylvanian</h3>
+                <h3>Under The Button</h3>
                 <p>
-                    Th ere are nearly 10,000 students, administrators, faculty, and staff who remain on Penn’s campus during the summer, working and/or participating in classes. The Summer Pennsylvanian, with a circulation of 4,000 copies distributed free on Th ursdays at approximately 45 campus-area locations, helps them beat the Philadelphia heat. As the only weekly campus publication during the summer session, The Summer Pennsylvanian off ers coverage of campus news and events, plus a weekly guide to Philadelphia’s summer entertainment scene.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="nine columns">
+                <h3 style="padding-top: 15px">The Summer Pennsylvanian</h3>
+                <p>
+                    There are nearly 10,000 students, administrators, faculty, and staff who remain on Penn’s campus during the summer, working and/or participating in classes. The Summer Pennsylvanian, with a circulation of 4,000 copies distributed free on Th ursdays at approximately 45 campus-area locations, helps them beat the Philadelphia heat. As the only weekly campus publication during the summer session, The Summer Pennsylvanian off ers coverage of campus news and events, plus a weekly guide to Philadelphia’s summer entertainment scene.
+                </p>
+            </div>
+            <div class="three columns">
+                <img src="img/summerpenn.jpg" class="img-responsive shaddow"/>
             </div>
         </div>
     </section>
