--- a/maintenance-mayhem/index.html
+++ b/maintenance-mayhem/index.html
@@ -121,7 +121,7 @@
 
         </p>
         <p>
-          They had started chasing another leak in the building on Sept. 1, and were hardly surprised to see it spread to the eighth floor.
+          They had started chasing another leak in the building on Sept. 1, and were hardly surprised to see it spread to an eighth floor room.
 
         </p>
         <p>
