Fixed a thing, added ad unit

--- a/2015-year-in-review/index.html
+++ b/2015-year-in-review/index.html
@@ -155,7 +155,7 @@
           <div class="timeline-panel">
             <div class="timeline-heading">
               <div class="fade-caption">
-                <img src="img/Pope.jpg" class="img img-responsive fade-caption" />
+                <img src="img/Football.jpg" class="img img-responsive fade-caption" />
               </div>
               <h4 class="timeline-title">Penn Football Wins Share of 17th Ivy League Title</h4>
               <p><small class="text-muted"><i class="glyphicon glyphicon-calendar"></i> Sept 26-27th</small></p>
@@ -165,13 +165,32 @@
         </li>
 
     </ul>
-
+    <!-- AD UNIT -->
+      <div class="row">
+        <center class="twelve columns leaderboard">
+          <script type="text/javascript">
+            google_ad_client = "pub-1146947442890318";
+            google_ad_width = 728;
+            google_ad_height = 90;
+            google_ad_format = "728x90_as";
+            google_ad_type = "image";
+            google_ad_channel = "";
+            google_color_border = "cccccc";
+            google_color_bg = "cccccc";
+            google_color_link = "cccccc";
+            google_color_text = "cccccc";
+            google_color_url = "FFFFFF";
+            google_ui_features = "rc:0";
+          </script>
+          <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+        </center>
     <footer>
       <hr>
       <center>
             Made with ♡ for <a href="http://thedp.com">The Daily Pennsylvanian</a> by <a href="http://andrewfis.ch">Andrew Fischer</a>. © 2015, all rights reserved.
         </center>
     </footer>
+
 </div>
   </body>
 </html>
